--- a/index.html
+++ b/index.html
@@ -194,20 +194,22 @@
             <div class="project-image">
               <div class="project-overlay">
                 <div class="project-links">
-                  <a href="#" class="project-link" target="_blank"
-                    ><i class="fas fa-external-link-alt"></i
-                    ><span>Live Demo</span></a
+                  <a href="https://rehana-2006.github.io/static_website/" class="project-link" target="_blank"
+                    >
+                    <i class="fas fa-external-link-alt"></i>
+                    <span>Live Demo</span></a
                   >
                 </div>
               </div>
               <div class="project-placeholder">
-                <i class="fas fa-store"></i>
+                <img src="./static.png" alt="static" />
+                <!-- <i class="fas fa-store"></i> -->
               </div>
             </div>
             <div class="project-content">
               <h3>Mini Home Decor E-Shop</h3>
               <p>
-                A fully responsive e-commerce platform for home decor items , a
+                A e-commerce platform for home decor items , a
                 static project featuring product listings, View product details
                 and shows the clean checkout process . Built with
                 <b>HTML and CSS</b>. It mainly focused on frontend development.
@@ -223,29 +225,33 @@
             <div class="project-image">
               <div class="project-overlay">
                 <div class="project-links">
-                  <a href="#" class="project-link" target="_blank"
+                  <a href="https://job-4-hope-full-stack.vercel.app/" class="project-link" target="_blank"
                     ><i class="fas fa-external-link-alt"></i
                     ><span>Live Demo</span></a
-                  >
-                  <a href="#" class="project-link" target="_blank"
-                    ><i class="fab fa-github"></i><span>GitHub</span></a
                   >
                 </div>
               </div>
               <div class="project-placeholder">
-                <i class="fas fa-tasks"></i>
+                <img src="./full stack.png" alt="job4hope" />
+                <!-- <i class="fas fa-tasks"></i> -->
               </div>
             </div>
             <div class="project-content">
-              <h3>Task Management App</h3>
+              <h3>Job4Hope</h3>
               <p>
-                An intuitive task manager with drag-and-drop functionality,
-                priority levels, and local storage persistence.
+                Job4Hope cannot solve every part of child labour, but it focuses
+                on the most important things it can actually change. We work on
+                two main areas: preventing child labour by improving economic
+                conditions, and helping children who are currently affected. By
+                focusing on these key areas, we can use our resources
+                effectively and create the biggest impact.
               </p>
               <div class="project-tech">
-                <span class="tech-tag">React</span
-                ><span class="tech-tag">CSS3</span
-                ><span class="tech-tag">LocalStorage</span>
+                <span class="tech-tag">HTML</span
+                ><span class="tech-tag">CSS</span
+                ><span class="tech-tag">JavaScript</span>
+                <span class="tech-tag">FastAPI</span>
+                <span class="tech-tag">PostgreSQL</span>
               </div>
             </div>
           </div>
@@ -257,8 +263,8 @@
     <section id="contact" class="contact section">
       <div class="container">
         <div class="section-header">
-          <span class="section-tag">Let's Connect</span>
-          <h2 class="section-title">Get In Touch</h2>
+          <span class="section-tag">Get in Touch</span>
+          <h2 class="section-title">Let's Connect</h2>
         </div>
         <div class="contact-content">
           <div class="contact-info">
