--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
           <p>
             I am Rehana Prijil from Kanyakumari district. I have completed my
             higher secondary education and am currently studying at Freshworks
-            Software Academy, focusing on web development. I have a strong
-            interest in backend development and web development.
+            Software Academy, focusing on web development , English and Life skills.
           </p>
           <p>
             I have learnt HTML, CSS, JavaScript, PostgreSQL, and FastAPI.
@@ -106,7 +105,7 @@
           </p>
           <p>
             I'm also learning problem solving using python. I'm also have
-            interest in exploring about AI and technologies related to it.
+            interest in web development and backend development
             Other than coding , I am also interested in drawing and Watching
             dramas.
           </p>
@@ -134,9 +133,9 @@
             <div class="circular-progress">
               <svg>
                 <circle cx="60" cy="60" r="52"></circle>
-                <circle cx="60" cy="60" r="52" style="stroke-dashoffset: 65.3; stroke: #3b82f6"></circle>
+                <circle cx="60" cy="60" r="52" style="stroke-dashoffset: 81.7; stroke: #3b82f6"></circle>
               </svg>
-              <div class="progress-value">80%</div>
+              <div class="progress-value">75%</div>
             </div>
             <h4 class="skill-name-card">HTML</h4>
           </div>
@@ -146,9 +145,9 @@
             <div class="circular-progress">
               <svg>
                 <circle cx="60" cy="60" r="52"></circle>
-                <circle cx="60" cy="60" r="52" style="stroke-dashoffset: 81.7; stroke: #8b5cf6"></circle>
+                <circle cx="60" cy="60" r="52" style="stroke-dashoffset: 98; stroke: #8b5cf6"></circle>
               </svg>
-              <div class="progress-value">75%</div>
+              <div class="progress-value">70%</div>
             </div>
             <h4 class="skill-name-card">CSS</h4>
           </div>
@@ -194,9 +193,9 @@
             <div class="circular-progress">
               <svg>
                 <circle cx="60" cy="60" r="52"></circle>
-                <circle cx="60" cy="60" r="52" style="stroke-dashoffset: 65.3; stroke: #7c3aed"></circle>
+                <circle cx="60" cy="60" r="52" style="stroke-dashoffset: 81.7; stroke: #7c3aed"></circle>
               </svg>
-              <div class="progress-value">80%</div>
+              <div class="progress-value">75%</div>
             </div>
             <h4 class="skill-name-card">FastAPI</h4>
           </div>
@@ -205,16 +204,82 @@
             <div class="circular-progress">
               <svg>
                 <circle cx="60" cy="60" r="52"></circle>
-                <circle cx="60" cy="60" r="52" style="stroke-dashoffset: 114.3; stroke: #7c3aed"></circle>
+                <circle cx="60" cy="60" r="52" style="stroke-dashoffset: 65.3; stroke: #7c3aed"></circle>
               </svg>
-              <div class="progress-value">65%</div>
+              <div class="progress-value">80%</div>
             </div>
             <h4 class="skill-name-card">Problem Solving</h4>
           </div>
         </div>
+        <h3 class="subsection-title">
+          <i class="fas fa-code"></i> Tools
+        </h3>
+         <div class="lsrw-grid">
+          <div class="lsrw-card fade-in-up">
+            <div class="lsrw-icon"><i class="fab fa-github"></i></div>
+            <h4 class="lsrw-label">github</h4>
+            <!-- <div class="grade-badge">A+</div> -->
+          </div>
+          <div class="lsrw-card fade-in-up">
+            <div class="lsrw-icon"><i class="fas fa-code"></i></div>
+            <h4 class="lsrw-label">VS Code</h4>
+            <!-- <div class="grade-badge">A+</div> -->
+          </div>
+          <div class="lsrw-card fade-in-up">
+            <div class="lsrw-icon"><i class="fas fa-lightbulb"></i></div>
+            <h4 class="lsrw-label">Figma</h4>
+            <!-- <div class="grade-badge">A+</div> -->
+          </div>
+          <div class="lsrw-card fade-in-up">
+            <div class="lsrw-icon"><i class="fas fa-"></i></div>
+            <h4 class="lsrw-label">vercel</h4>
+            <!-- <div class="grade-badge">A+</div> -->
+          </div>
+          <div class="lsrw-card fade-in-up">
+            <div class="lsrw-icon"><i class="fas fa-database"></i></div>
+            <h4 class="lsrw-label">Supabase</h4>
+            <!-- <div class="grade-badge">A+</div> -->
+          </div>
+        </div>
+
       </div>
 
-      <!-- Life Skills Subsection -->
+      <!-- Communication Subsection -->
+      <div class="subsection" style="margin-top: 60px">
+        <h3 class="subsection-title">
+          <i class="fas fa-language"></i> Communication
+        </h3>
+        <div class="lsrw-grid">
+          <!-- Listening -->
+          <div class="lsrw-card fade-in-up">
+            <div class="lsrw-icon"><i class="fas fa-headphones"></i></div>
+            <h4 class="lsrw-label">Listening</h4>
+            <div class="grade-badge">B2</div>
+            <!-- <div class="grade-badge">Upper Intermediate</div> -->
+          </div>
+          <!-- Speaking -->
+          <div class="lsrw-card fade-in-up">
+            <div class="lsrw-icon"><i class="fas fa-comment-dots"></i></div>
+            <h4 class="lsrw-label">Speaking</h4>
+            <div class="grade-badge">B2</div>
+            <!-- <div class="grade-badge">Upper Intermediate</div> -->
+          </div>
+          <!-- Reading -->
+          <div class="lsrw-card fade-in-up">
+            <div class="lsrw-icon"><i class="fas fa-book-open"></i></div>
+            <h4 class="lsrw-label">Reading</h4>
+            <div class="grade-badge">B2</div>
+            <!-- <div class="grade-badge">Upper Intermediate</div> -->
+          </div>
+          <!-- Writing -->
+          <div class="lsrw-card fade-in-up">
+            <div class="lsrw-icon"><i class="fas fa-pen-nib"></i></div>
+            <h4 class="lsrw-label">Writing</h4>
+            <div class="grade-badge">B2</div>
+            <!-- <div class="grade-badge">Upper Intermediate</div> -->
+          </div>
+        </div>
+      </div>
       <div class="subsection" style="margin-top: 60px">
         <h3 class="subsection-title">
           <i class="fas fa-heart"></i> Life Skills
@@ -229,49 +294,6 @@
             <div class="lsrw-icon"><i class="fas fa-lightbulb"></i></div>
             <h4 class="lsrw-label">Problem Solving</h4>
             <!-- <div class="grade-badge">A+</div> -->
-          </div>
-          <!-- <div class="lsrw-card fade-in-up">
-            <div class="lsrw-icon"><i class="fas fa-clock"></i></div>
-            <h4 class="lsrw-label">Time Management</h4>
-            <div class="grade-badge">A</div>
-          </div> -->
-          <!-- <div class="lsrw-card fade-in-up"> -->
-            <!-- <div class="lsrw-icon"><i class="fas fa-sync-alt"></i></div> -->
-            <!-- <h4 class="lsrw-label">Adaptability</h4> -->
-            <!-- <div class="grade-badge">A+</div> -->
-          <!-- </div> -->
-        </div>
-      </div>
-
-      <!-- Communication Subsection -->
-      <div class="subsection" style="margin-top: 60px">
-        <h3 class="subsection-title">
-          <i class="fas fa-language"></i> Communication
-        </h3>
-        <div class="lsrw-grid">
-          <!-- Listening -->
-          <div class="lsrw-card fade-in-up">
-            <div class="lsrw-icon"><i class="fas fa-headphones"></i></div>
-            <h4 class="lsrw-label">Listening</h4>
-            <div class="grade-badge">A+</div>
-          </div>
-          <!-- Speaking -->
-          <div class="lsrw-card fade-in-up">
-            <div class="lsrw-icon"><i class="fas fa-comment-dots"></i></div>
-            <h4 class="lsrw-label">Speaking</h4>
-            <div class="grade-badge">A</div>
-          </div>
-          <!-- Reading -->
-          <div class="lsrw-card fade-in-up">
-            <div class="lsrw-icon"><i class="fas fa-book-open"></i></div>
-            <h4 class="lsrw-label">Reading</h4>
-            <div class="grade-badge">A+</div>
-          </div>
-          <!-- Writing -->
-          <div class="lsrw-card fade-in-up">
-            <div class="lsrw-icon"><i class="fas fa-pen-nib"></i></div>
-            <h4 class="lsrw-label">Writing</h4>
-            <div class="grade-badge">A+</div>
           </div>
         </div>
       </div>
@@ -408,12 +430,12 @@
               <h3>Comfort Cradle</h3>
               <p>
                 An innovative pain relief belt designed specifically for
-                period cramps. Developed as a group product, focusing on
-                hardware design, comfort, and physiological relief efficiency.
+                period cramps, Which help us to understand teamwork and collaboration in a group.
+
               </p>
               <div class="project-tech">
                 <span class="tech-tag">Product Design</span>
-                <span class="tech-tag">marketing</span>
+                <span class="tech-tag">Collaboration</span>
                 <span class="tech-tag">Teamwork</span>
               </div>
             </div>
@@ -440,8 +462,7 @@
                 A presentation we made on workplace study was mainly helpful
                 to understand about the roles in IT industry.Through this we
                 learned about networking, collecting information and
-                documentation. Help us to learn about the collaboration
-                between the team members.
+                documentation and team collaboration.
               </p>
               <div class="project-tech">
                 <span class="tech-tag">Presentation</span>
