--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <!-- <div class="grade-badge">A+</div> -->
           </div>
           <div class="lsrw-card fade-in-up">
-            <div class="lsrw-icon"><i class="fas fa-"></i></div>
+            <div class="lsrw-icon"><i class="fas fa-server"></i></div>
             <h4 class="lsrw-label">vercel</h4>
             <!-- <div class="grade-badge">A+</div> -->
           </div>
