--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="window-body">
               <pre><code><span class="code-keyword">const</span> <span class="code-variable">developer</span> 
-  <span class="code-property">name</span> <span class="code-string">"Your Name"</span>
+  <span class="code-property">name</span> <span class="code-string">"Rehana Prijil.S"</span>
   <span class="code-property">skills</span> <span class="code-string">"Web Dev"</span> <span class="code-string">"JavaScript"</span>
   <span class="code-property">passion</span> <span class="code-string">"Building cool stuff"</span>
 </code></pre>
@@ -555,8 +555,8 @@
                 class="fab fa-linkedin"></i></a>
           </div>
         </div>
-        <!-- <div class="contact-form-wrapper">
-          <form id="contact-form" class="contact-form">
+        <div class="contact-form-wrapper">
+          <form action="https://formspree.io/f/meeejjdl" method="post" id="contact-form" class="contact-form">
             <div class="form-group">
               <label for="name">Your Name</label>
               <input type="text" id="name" name="name" placeholder="John Doe" required />
@@ -568,13 +568,8 @@
               <span class="error-message" id="email-error"></span>
             </div>
             <div class="form-group">
-              <label for="subject">Subject</label>
-              <input type="text" id="subject" name="subject" placeholder="Project Collaboration" required />
-              <span class="error-message" id="subject-error"></span>
-            </div>
-            <div class="form-group">
               <label for="message">Message</label>
-              <textarea id="message" name="message" rows="5" placeholder="Tell me about your project..."
+              <textarea id="message" name="message" rows="5" placeholder="want to hire me?"
                 required></textarea>
               <span class="error-message" id="message-error"></span>
             </div>
@@ -583,7 +578,7 @@
             </button>
             <div class="form-status" id="form-status"></div>
           </form>
-        </div> -->
+        </div>
       </div>
     </div>
   </section>
