--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="hero-content">
         <div class="hero-text">
           <p class="hero-greeting fade-in">Hi there! 👋 I'm</p>
-          <h1 class="hero-name fade-in-up">Rehana Prijil.S</h1>
+          <h1 class="hero-name fade-in-up">Rehana Prijil S</h1>
           <p class="hero-description fade-in-up">
             A passionate web development student crafting elegant solutions
             through code. I transform ideas into interactive digital
@@ -106,7 +106,7 @@
           <p>
             I'm also learning problem solving using python. I'm also 
             interest in web development and backend development
-            Other than coding , I am also interested in drawing and Watching
+            Other than coding, I am also interested in drawing and Watching
             dramas.
           </p>
         </div>
@@ -247,7 +247,7 @@
       <!-- Communication Subsection -->
       <div class="subsection" style="margin-top: 60px">
         <h3 class="subsection-title">
-          <i class="fas fa-language"></i> Communication
+          <i class="fas fa-language"></i> English Skills
         </h3>
         <div class="lsrw-grid">
           <!-- Listening -->
