--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
             using the skills I learnt.
           </p>
           <p>
-            I'm also learning problem solving using python. I'm also 
-            interest in web development and backend development
+            I'm also learning problem solving using python. I'm have 
+            interested in web development and backend development
             Other than coding, I am also interested in drawing and Watching
             dramas.
           </p>
