--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             using the skills I learnt.
           </p>
           <p>
-            I'm also learning problem solving using python. I'm have 
+            I'm also learning problem solving using python. I have 
             interested in web development and backend development
             Other than coding, I am also interested in drawing and Watching
             dramas.
