--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <p>
             I'm also learning problem solving using python. I have 
             interested in web development and backend development
-            Other than coding, I am also interested in drawing and Watching
+            Other than coding, I am also interested in drawing and watching
             dramas.
           </p>
         </div>
@@ -193,7 +193,7 @@
             <div class="circular-progress">
               <svg>
                 <circle cx="60" cy="60" r="52"></circle>
-                <circle cx="60" cy="60" r="52" style="stroke-dashoffset: 81.7; stroke: #7c3aed"></circle>
+                <circle cx="60" cy="60" r="52" style="stroke-dashoffset: 81.7; stroke: #3a9fed"></circle>
               </svg>
               <div class="progress-value">75%</div>
             </div>
@@ -204,7 +204,7 @@
             <div class="circular-progress">
               <svg>
                 <circle cx="60" cy="60" r="52"></circle>
-                <circle cx="60" cy="60" r="52" style="stroke-dashoffset: 65.3; stroke: #7c3aed"></circle>
+                <circle cx="60" cy="60" r="52" style="stroke-dashoffset: 65.3; stroke: #ed3a4f"></circle>
               </svg>
               <div class="progress-value">80%</div>
             </div>
@@ -452,7 +452,7 @@
                 </div>
               </div>
               <div class="project-placeholder">
-                <img src="./workplace.png" alt="workplace study" />
+                <img src="./work_place_study_pic.jpeg" alt="workplace study" />
                 <!-- <i class="fas fa-briefcase-medical"></i> -->
               </div>
             </div>
