--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
             <div class="achievement-details">
               <h3>Product building Challenge</h3>
               <p>
-                recognized individually for good presentation skills in
+                Recognized individually for good presentation skills in
                 product building challenge and received a certificate from the
                 Freshworks Software Academy.
               </p>
